5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1650_2730.log
== TEST (2019-04-15 13:37:21) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if x, y >=0:
	print("Superiores")
else:
	print("Inferiores")

-- ERROR:
File "XXXX", line 4
    if x, y >=0:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:33) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if (x,y) >=0:
	print("Superiores")
else:
	print("Inferiores")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (x,y) >=0:
TypeError: '>=' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:12) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if y >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:21) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if x >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:27) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if y >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:36) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if x>= 0:
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:39) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if x >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:38:46) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if x >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- EXECUTION TIME:
0.202083
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:47) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if x >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:39:00) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if y >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:39:11) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))

if y >= 0:
	print("Superiores")
else:
	print("Inferiores")

-- EXECUTION TIME:
0.200554
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
